# simple-pdf-rag

./: .env  .gitignore  db.py  gemini_free_models.py  generator.py  main.py  pipeline.py  pyproject.toml  rag.py
ingestion/: chunker.py  chunks_test.txt  embedder.py  extractor.py  test.md  test.txt
